--- a/VISHNE_DEMO/VISHNE_DEMO.ioc
+++ b/VISHNE_DEMO/VISHNE_DEMO.ioc
@@ -1,6 +1,12 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.IPParameters=Rank-3\#ChannelRegularConversion,master,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-3\#ChannelRegularConversion=1
+ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.master=1
 ADC3.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC3.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
+ADC3.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV2
 ADC3.ContinuousConvMode=ENABLE
 ADC3.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,ClockPrescaler,ScanConvMode,Resolution
 ADC3.NbrOfConversionFlag=1
@@ -11,98 +17,106 @@ ADC3.ScanConvMode=DISABLE
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-Dma.ADC3.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC3.2.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.ADC3.2.Instance=DMA2_Stream0
-Dma.ADC3.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC3.2.MemInc=DMA_MINC_ENABLE
-Dma.ADC3.2.Mode=DMA_CIRCULAR
-Dma.ADC3.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC3.2.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC3.2.Priority=DMA_PRIORITY_LOW
-Dma.ADC3.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.Request0=USART2_RX
-Dma.Request1=TIM1_CH1
-Dma.Request2=ADC3
+Dma.ADC1.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC1.2.Instance=DMA2_Stream4
+Dma.ADC1.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.2.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.2.Mode=DMA_NORMAL
+Dma.ADC1.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.2.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.2.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.ADC3.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC3.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC3.1.Instance=DMA2_Stream0
+Dma.ADC3.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC3.1.MemInc=DMA_MINC_ENABLE
+Dma.ADC3.1.Mode=DMA_CIRCULAR
+Dma.ADC3.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC3.1.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC3.1.Priority=DMA_PRIORITY_LOW
+Dma.ADC3.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request0=TIM1_CH1
+Dma.Request1=ADC3
+Dma.Request2=ADC1
 Dma.RequestsNb=3
-Dma.TIM1_CH1.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.TIM1_CH1.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.TIM1_CH1.1.Instance=DMA2_Stream1
-Dma.TIM1_CH1.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.TIM1_CH1.1.MemInc=DMA_MINC_ENABLE
-Dma.TIM1_CH1.1.Mode=DMA_NORMAL
-Dma.TIM1_CH1.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.TIM1_CH1.1.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM1_CH1.1.Priority=DMA_PRIORITY_LOW
-Dma.TIM1_CH1.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART2_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART2_RX.0.Instance=DMA1_Stream5
-Dma.USART2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART2_RX.0.Mode=DMA_NORMAL
-Dma.USART2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.USART2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.TIM1_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM1_CH1.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.TIM1_CH1.0.Instance=DMA2_Stream1
+Dma.TIM1_CH1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM1_CH1.0.MemInc=DMA_MINC_ENABLE
+Dma.TIM1_CH1.0.Mode=DMA_NORMAL
+Dma.TIM1_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM1_CH1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM1_CH1.0.Priority=DMA_PRIORITY_LOW
+Dma.TIM1_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F407VGT6
 Mcu.Family=STM32F4
-Mcu.IP0=ADC3
-Mcu.IP1=DMA
-Mcu.IP2=I2C3
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SPI3
-Mcu.IP6=SYS
-Mcu.IP7=TIM1
-Mcu.IP8=USART2
-Mcu.IPNb=9
+Mcu.IP0=ADC1
+Mcu.IP1=ADC3
+Mcu.IP10=TIM11
+Mcu.IP11=USART2
+Mcu.IP2=DMA
+Mcu.IP3=I2C2
+Mcu.IP4=I2C3
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SPI3
+Mcu.IP8=SYS
+Mcu.IP9=TIM1
+Mcu.IPNb=12
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PE9
-Mcu.Pin11=PE12
-Mcu.Pin12=PE13
-Mcu.Pin13=PE14
-Mcu.Pin14=PE15
-Mcu.Pin15=PB10
-Mcu.Pin16=PC9
-Mcu.Pin17=PA8
-Mcu.Pin18=PC10
-Mcu.Pin19=PC11
+Mcu.Pin10=PA6
+Mcu.Pin11=PB1
+Mcu.Pin12=PE9
+Mcu.Pin13=PE12
+Mcu.Pin14=PE13
+Mcu.Pin15=PE14
+Mcu.Pin16=PE15
+Mcu.Pin17=PB10
+Mcu.Pin18=PB11
+Mcu.Pin19=PD8
 Mcu.Pin2=PH0-OSC_IN
-Mcu.Pin20=PC12
-Mcu.Pin21=PD0
-Mcu.Pin22=PD1
-Mcu.Pin23=PD2
-Mcu.Pin24=PD3
-Mcu.Pin25=PB5
-Mcu.Pin26=PB6
-Mcu.Pin27=PB7
-Mcu.Pin28=PB8
-Mcu.Pin29=VP_SYS_VS_Systick
+Mcu.Pin20=PC9
+Mcu.Pin21=PA8
+Mcu.Pin22=PC10
+Mcu.Pin23=PC11
+Mcu.Pin24=PC12
+Mcu.Pin25=PD0
+Mcu.Pin26=PD1
+Mcu.Pin27=PD2
+Mcu.Pin28=PB5
+Mcu.Pin29=PB6
 Mcu.Pin3=PH1-OSC_OUT
-Mcu.Pin30=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin4=PA1
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA4
-Mcu.Pin8=PA5
-Mcu.Pin9=PA6
-Mcu.PinsNb=31
+Mcu.Pin30=PB7
+Mcu.Pin31=PB8
+Mcu.Pin32=VP_SYS_VS_Systick
+Mcu.Pin33=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin34=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin35=VP_TIM11_VS_no_output1
+Mcu.Pin4=PA0-WKUP
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA4
+Mcu.Pin9=PA5
+Mcu.PinsNb=36
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
 MxCube.Version=6.11.0
 MxDb.Version=DB.6.0.110
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -112,13 +126,13 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=VIDEO
+PA0-WKUP.Signal=ADCx_IN0
 PA1.Signal=ADCx_IN1
+PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
+PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA4.GPIOParameters=GPIO_Label
@@ -135,11 +149,18 @@ PA6.Locked=true
 PA6.Signal=GPIO_Output
 PA8.Mode=I2C
 PA8.Signal=I2C3_SCL
-PB10.GPIOParameters=GPIO_PuPd,GPIO_Label
-PB10.GPIO_Label=NAVIGATE_BTN
-PB10.GPIO_PuPd=GPIO_NOPULL
-PB10.Locked=true
-PB10.Signal=GPIO_Input
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=NAVIGATE_BTN
+PB1.Locked=true
+PB1.Signal=GPIO_Input
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=LCD_SCL
+PB10.Mode=I2C
+PB10.Signal=I2C2_SCL
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=LCD_SDA
+PB11.Mode=I2C
+PB11.Signal=I2C2_SDA
 PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=SPEC_START
 PB5.Locked=true
@@ -180,10 +201,11 @@ PD2.GPIOParameters=GPIO_Label
 PD2.GPIO_Label=LCD_RST
 PD2.Locked=true
 PD2.Signal=GPIO_Output
-PD3.GPIOParameters=GPIO_Label
-PD3.GPIO_Label=LCD_BL
-PD3.Locked=true
-PD3.Signal=GPIO_Output
+PD8.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PD8.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PD8.GPIO_PuPd=GPIO_PULLDOWN
+PD8.Locked=true
+PD8.Signal=GPXTI8
 PE12.GPIOParameters=GPIO_Label
 PE12.GPIO_Label=ERR_BUZZER
 PE12.Locked=true
@@ -192,9 +214,8 @@ PE13.GPIOParameters=GPIO_Label
 PE13.GPIO_Label=READY_LED
 PE13.Locked=true
 PE13.Signal=GPIO_Output
-PE14.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE14.GPIOParameters=GPIO_Label
 PE14.GPIO_Label=NEXT_BTN
-PE14.GPIO_PuPd=GPIO_NOPULL
 PE14.Locked=true
 PE14.Signal=GPIO_Input
 PE15.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -238,7 +259,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_SPI3_Init-SPI3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_SPI3_Init-SPI3-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true,11-MX_TIM11_Init-TIM11-false-HAL-true
 RCC.48MHZClocksFreq_Value=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -271,26 +292,41 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=144000000
 RCC.VcooutputI2S=192000000
+SH.ADCx_IN0.0=ADC1_IN0,IN0
+SH.ADCx_IN0.ConfNb=1
 SH.ADCx_IN1.0=ADC3_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
 SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
-SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
-SPI3.CalculateBaudRate=2.25 MBits/s
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+SPI3.CRCCalculation=SPI_CRCCALCULATION_DISABLE
+SPI3.CalculateBaudRate=18.0 MBits/s
+SPI3.DataSize=SPI_DATASIZE_8BIT
 SPI3.Direction=SPI_DIRECTION_2LINES
-SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI3.FirstBit=SPI_FIRSTBIT_MSB
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize,FirstBit,CRCCalculation
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
 TIM1.Period=10-1
 TIM1.Prescaler=53-1
+TIM11.Channel=TIM_CHANNEL_1
+TIM11.IPParameters=Channel,Prescaler,Period
+TIM11.Period=30000-1
+TIM11.Prescaler=36000-1
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM11_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM11_VS_ClockSourceINT.Signal=TIM11_VS_ClockSourceINT
+VP_TIM11_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM11_VS_no_output1.Signal=TIM11_VS_no_output1
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 board=custom
