--- a/VISHNE_DEMO/VISHNE_DEMO.ioc
+++ b/VISHNE_DEMO/VISHNE_DEMO.ioc
@@ -58,17 +58,16 @@ Mcu.CPN=STM32F407VGT6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC3
-Mcu.IP10=TIM11
-Mcu.IP11=USART2
+Mcu.IP10=USART2
 Mcu.IP2=DMA
-Mcu.IP3=I2C2
-Mcu.IP4=I2C3
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SPI3
-Mcu.IP8=SYS
-Mcu.IP9=TIM1
-Mcu.IPNb=12
+Mcu.IP3=I2C3
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SPI3
+Mcu.IP7=SYS
+Mcu.IP8=TIM1
+Mcu.IP9=TIM11
+Mcu.IPNb=11
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
@@ -80,34 +79,30 @@ Mcu.Pin13=PE12
 Mcu.Pin14=PE13
 Mcu.Pin15=PE14
 Mcu.Pin16=PE15
-Mcu.Pin17=PB10
-Mcu.Pin18=PB11
-Mcu.Pin19=PD8
+Mcu.Pin17=PD8
+Mcu.Pin18=PC9
+Mcu.Pin19=PA8
 Mcu.Pin2=PH0-OSC_IN
-Mcu.Pin20=PC9
-Mcu.Pin21=PA8
-Mcu.Pin22=PC10
-Mcu.Pin23=PC11
-Mcu.Pin24=PC12
-Mcu.Pin25=PD0
-Mcu.Pin26=PD1
-Mcu.Pin27=PD2
-Mcu.Pin28=PB5
-Mcu.Pin29=PB6
+Mcu.Pin20=PC10
+Mcu.Pin21=PC11
+Mcu.Pin22=PC12
+Mcu.Pin23=PD0
+Mcu.Pin24=PD1
+Mcu.Pin25=PD2
+Mcu.Pin26=PB5
+Mcu.Pin27=PB8
+Mcu.Pin28=VP_SYS_VS_Systick
+Mcu.Pin29=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin3=PH1-OSC_OUT
-Mcu.Pin30=PB7
-Mcu.Pin31=PB8
-Mcu.Pin32=VP_SYS_VS_Systick
-Mcu.Pin33=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin34=VP_TIM11_VS_ClockSourceINT
-Mcu.Pin35=VP_TIM11_VS_no_output1
+Mcu.Pin30=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin31=VP_TIM11_VS_no_output1
 Mcu.Pin4=PA0-WKUP
 Mcu.Pin5=PA1
 Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=36
+Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -127,7 +122,11 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_Label
+PA0-WKUP.GPIO_Label=BATT_LEVEL
 PA0-WKUP.Signal=ADCx_IN0
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=SPEC_VIDEO
 PA1.Signal=ADCx_IN1
 PA2.Locked=true
 PA2.Mode=Asynchronous
@@ -136,43 +135,29 @@ PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=EOS
+PA4.GPIO_Label=SPEC_EOS
 PA4.Locked=true
 PA4.Signal=GPXTI4
 PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=BUTTON
+PA5.GPIO_Label=StartTest_BTN
 PA5.Locked=true
 PA5.Signal=GPIO_Input
 PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=LED
+PA6.GPIO_Label=SPEC_LED
 PA6.Locked=true
 PA6.Signal=GPIO_Output
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=RTC_SCL
 PA8.Mode=I2C
 PA8.Signal=I2C3_SCL
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=NAVIGATE_BTN
 PB1.Locked=true
 PB1.Signal=GPIO_Input
-PB10.GPIOParameters=GPIO_Label
-PB10.GPIO_Label=LCD_SCL
-PB10.Mode=I2C
-PB10.Signal=I2C2_SCL
-PB11.GPIOParameters=GPIO_Label
-PB11.GPIO_Label=LCD_SDA
-PB11.Mode=I2C
-PB11.Signal=I2C2_SDA
 PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=SPEC_START
 PB5.Locked=true
 PB5.Signal=GPIO_Output
-PB6.GPIOParameters=GPIO_Label
-PB6.GPIO_Label=SPEC_CLK
-PB6.Locked=true
-PB6.Signal=GPIO_Output
-PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=SPEC_EOS
-PB7.Locked=true
-PB7.Signal=GPIO_Output
 PB8.GPIOParameters=GPIO_Label
 PB8.GPIO_Label=SPEC_GAIN
 PB8.Locked=true
@@ -187,6 +172,8 @@ PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=RTC_SDA
 PC9.Mode=I2C
 PC9.Signal=I2C3_SDA
 PD0.GPIOParameters=GPIO_Label
@@ -201,7 +188,8 @@ PD2.GPIOParameters=GPIO_Label
 PD2.GPIO_Label=LCD_RST
 PD2.Locked=true
 PD2.Signal=GPIO_Output
-PD8.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PD8.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PD8.GPIO_Label=IsCharging_EXTI
 PD8.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PD8.GPIO_PuPd=GPIO_PULLDOWN
 PD8.Locked=true
@@ -223,6 +211,8 @@ PE15.GPIO_Label=PREV_BTN
 PE15.GPIO_PuPd=GPIO_NOPULL
 PE15.Locked=true
 PE15.Signal=GPIO_Input
+PE9.GPIOParameters=GPIO_Label
+PE9.GPIO_Label=SPEC_CLK
 PE9.Signal=S_TIM1_CH1
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
@@ -259,7 +249,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_SPI3_Init-SPI3-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true,11-MX_TIM11_Init-TIM11-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_SPI3_Init-SPI3-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_TIM11_Init-TIM11-false-HAL-true
 RCC.48MHZClocksFreq_Value=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
