--- a/VISHNE_DEMO/VISHNE_DEMO.ioc
+++ b/VISHNE_DEMO/VISHNE_DEMO.ioc
@@ -1,12 +1,13 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.IPParameters=Rank-3\#ChannelRegularConversion,master,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
+ADC1.IPParameters=Rank-3\#ChannelRegularConversion,master,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-3\#ChannelRegularConversion=1
 ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
 ADC3.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC3.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV2
+ADC3.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
 ADC3.ContinuousConvMode=ENABLE
 ADC3.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,ClockPrescaler,ScanConvMode,Resolution
 ADC3.NbrOfConversionFlag=1
@@ -297,36 +298,37 @@ ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_SPI3_Init-SPI3-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_TIM11_Init-TIM11-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,12-MX_USB_HOST_Init-USB_HOST-false-HAL-false
-RCC.48MHZClocksFreq_Value=36000000
-RCC.AHBFreq_Value=72000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=36000000
-RCC.APB1TimFreq_Value=72000000
+RCC.48MHZClocksFreq_Value=48000000
+RCC.AHBFreq_Value=168000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV4
+RCC.APB1Freq_Value=42000000
+RCC.APB1TimFreq_Value=84000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=36000000
-RCC.APB2TimFreq_Value=72000000
-RCC.CortexFreq_Value=72000000
-RCC.EthernetFreq_Value=72000000
-RCC.FCLKCortexFreq_Value=72000000
+RCC.APB2Freq_Value=84000000
+RCC.APB2TimFreq_Value=168000000
+RCC.CortexFreq_Value=168000000
+RCC.EthernetFreq_Value=168000000
+RCC.FCLKCortexFreq_Value=168000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=72000000
+RCC.HCLKFreq_Value=168000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
-RCC.MCO2PinFreq_Value=72000000
-RCC.PLLCLKFreq_Value=72000000
+RCC.MCO2PinFreq_Value=168000000
+RCC.PLLCLKFreq_Value=168000000
 RCC.PLLM=4
-RCC.PLLN=72
-RCC.PLLQCLKFreq_Value=36000000
+RCC.PLLN=168
+RCC.PLLQ=7
+RCC.PLLQCLKFreq_Value=48000000
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
-RCC.SYSCLKFreq_VALUE=72000000
+RCC.SYSCLKFreq_VALUE=168000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
-RCC.VCOOutputFreq_Value=144000000
+RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
@@ -340,7 +342,7 @@ SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI3.CRCCalculation=SPI_CRCCALCULATION_DISABLE
-SPI3.CalculateBaudRate=18.0 MBits/s
+SPI3.CalculateBaudRate=21.0 MBits/s
 SPI3.DataSize=SPI_DATASIZE_8BIT
 SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.FirstBit=SPI_FIRSTBIT_MSB
@@ -350,7 +352,7 @@ SPI3.VirtualType=VM_MASTER
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
 TIM1.Period=10-1
-TIM1.Prescaler=53-1
+TIM1.Prescaler=124-1
 TIM11.Channel=TIM_CHANNEL_1
 TIM11.IPParameters=Channel,Prescaler,Period
 TIM11.Period=30000-1
