--- a/VISHNE_DEMO/VISHNE_DEMO.ioc
+++ b/VISHNE_DEMO/VISHNE_DEMO.ioc
@@ -81,10 +81,11 @@ Mcu.CPN=STM32F407VGT6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC3
-Mcu.IP10=USART2
-Mcu.IP11=USART3
-Mcu.IP12=USB_HOST
-Mcu.IP13=USB_OTG_FS
+Mcu.IP10=TIM11
+Mcu.IP11=USART2
+Mcu.IP12=USART3
+Mcu.IP13=USB_HOST
+Mcu.IP14=USB_OTG_FS
 Mcu.IP2=DMA
 Mcu.IP3=I2C3
 Mcu.IP4=NVIC
@@ -92,8 +93,8 @@ Mcu.IP5=RCC
 Mcu.IP6=SPI3
 Mcu.IP7=SYS
 Mcu.IP8=TIM1
-Mcu.IP9=TIM11
-Mcu.IPNb=14
+Mcu.IP9=TIM10
+Mcu.IPNb=15
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
@@ -110,32 +111,36 @@ Mcu.Pin18=PB10
 Mcu.Pin19=PB11
 Mcu.Pin2=PH0-OSC_IN
 Mcu.Pin20=PD8
-Mcu.Pin21=PC9
-Mcu.Pin22=PA8
-Mcu.Pin23=PA9
-Mcu.Pin24=PA11
-Mcu.Pin25=PA12
-Mcu.Pin26=PC10
-Mcu.Pin27=PC11
-Mcu.Pin28=PC12
-Mcu.Pin29=PD0
+Mcu.Pin21=PD11
+Mcu.Pin22=PD12
+Mcu.Pin23=PC9
+Mcu.Pin24=PA8
+Mcu.Pin25=PA9
+Mcu.Pin26=PA11
+Mcu.Pin27=PA12
+Mcu.Pin28=PC10
+Mcu.Pin29=PC11
 Mcu.Pin3=PH1-OSC_OUT
-Mcu.Pin30=PD1
-Mcu.Pin31=PD2
-Mcu.Pin32=PB5
-Mcu.Pin33=PB8
-Mcu.Pin34=VP_SYS_VS_Systick
-Mcu.Pin35=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin36=VP_TIM11_VS_ClockSourceINT
-Mcu.Pin37=VP_TIM11_VS_no_output1
-Mcu.Pin38=VP_USB_HOST_VS_USB_HOST_HID_FS
+Mcu.Pin30=PC12
+Mcu.Pin31=PD0
+Mcu.Pin32=PD1
+Mcu.Pin33=PD2
+Mcu.Pin34=PB5
+Mcu.Pin35=PB8
+Mcu.Pin36=VP_SYS_VS_Systick
+Mcu.Pin37=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin39=VP_TIM10_VS_no_output1
 Mcu.Pin4=PC0
+Mcu.Pin40=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin41=VP_TIM11_VS_no_output1
+Mcu.Pin42=VP_USB_HOST_VS_USB_HOST_HID_FS
 Mcu.Pin5=PA0-WKUP
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=39
+Mcu.PinsNb=43
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -232,6 +237,14 @@ PD1.GPIOParameters=GPIO_Label
 PD1.GPIO_Label=LCD_DC
 PD1.Locked=true
 PD1.Signal=GPIO_Output
+PD11.GPIOParameters=GPIO_Label
+PD11.GPIO_Label=Bcode_INIT
+PD11.Locked=true
+PD11.Signal=GPIO_Output
+PD12.GPIOParameters=GPIO_Label
+PD12.GPIO_Label=BT_INIT
+PD12.Locked=true
+PD12.Signal=GPIO_Output
 PD2.GPIOParameters=GPIO_Label
 PD2.GPIO_Label=LCD_RST
 PD2.Locked=true
@@ -297,7 +310,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_SPI3_Init-SPI3-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_TIM11_Init-TIM11-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,12-MX_USB_HOST_Init-USB_HOST-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_SPI3_Init-SPI3-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_TIM11_Init-TIM11-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,12-MX_USB_HOST_Init-USB_HOST-false-HAL-false,13-MX_TIM10_Init-TIM10-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -353,6 +366,10 @@ TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
 TIM1.Period=10-1
 TIM1.Prescaler=124-1
+TIM10.Channel=TIM_CHANNEL_1
+TIM10.IPParameters=Channel,Prescaler,Period
+TIM10.Period=30000-1
+TIM10.Prescaler=36000-1
 TIM11.Channel=TIM_CHANNEL_1
 TIM11.IPParameters=Channel,Prescaler,Period
 TIM11.Period=30000-1
@@ -381,6 +398,10 @@ USB_OTG_FS.VirtualMode=Host_Only
 USB_OTG_FS.phy_itface=HCD_PHY_EMBEDDED
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
+VP_TIM10_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM10_VS_no_output1.Signal=TIM10_VS_no_output1
 VP_TIM11_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM11_VS_ClockSourceINT.Signal=TIM11_VS_ClockSourceINT
 VP_TIM11_VS_no_output1.Mode=Output Compare1 No Output
