--- a/VISHNE_DEMO/VISHNE_DEMO.ioc
+++ b/VISHNE_DEMO/VISHNE_DEMO.ioc
@@ -1,5 +1,5 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_8
 ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
 ADC1.IPParameters=Rank-3\#ChannelRegularConversion,master,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler
 ADC1.NbrOfConversionFlag=1
@@ -82,10 +82,11 @@ Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC3
 Mcu.IP10=TIM11
-Mcu.IP11=USART2
-Mcu.IP12=USART3
-Mcu.IP13=USB_HOST
-Mcu.IP14=USB_OTG_FS
+Mcu.IP11=TIM13
+Mcu.IP12=USART2
+Mcu.IP13=USART3
+Mcu.IP14=USB_HOST
+Mcu.IP15=USB_OTG_FS
 Mcu.IP2=DMA
 Mcu.IP3=I2C3
 Mcu.IP4=NVIC
@@ -94,14 +95,14 @@ Mcu.IP6=SPI3
 Mcu.IP7=SYS
 Mcu.IP8=TIM1
 Mcu.IP9=TIM10
-Mcu.IPNb=15
+Mcu.IPNb=16
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
 Mcu.Pin10=PA5
 Mcu.Pin11=PA7
-Mcu.Pin12=PB1
+Mcu.Pin12=PB0
 Mcu.Pin13=PE9
 Mcu.Pin14=PE12
 Mcu.Pin15=PE13
@@ -134,13 +135,15 @@ Mcu.Pin39=VP_TIM10_VS_no_output1
 Mcu.Pin4=PC0
 Mcu.Pin40=VP_TIM11_VS_ClockSourceINT
 Mcu.Pin41=VP_TIM11_VS_no_output1
-Mcu.Pin42=VP_USB_HOST_VS_USB_HOST_HID_FS
+Mcu.Pin42=VP_TIM13_VS_ClockSourceINT
+Mcu.Pin43=VP_TIM13_VS_no_output1
+Mcu.Pin44=VP_USB_HOST_VS_USB_HOST_HID_FS
 Mcu.Pin5=PA0-WKUP
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=43
+Mcu.PinsNb=45
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -164,10 +167,9 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
-PA0-WKUP.GPIO_Label=BATT_LEVEL
-PA0-WKUP.Signal=ADCx_IN0
-PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=SPEC_VIDEO
+PA0-WKUP.GPIO_Label=NAVIGATE_BTN
+PA0-WKUP.Locked=true
+PA0-WKUP.Signal=GPXTI0
 PA1.Signal=ADCx_IN1
 PA11.Mode=Host_Only
 PA11.Signal=USB_OTG_FS_DM
@@ -197,10 +199,9 @@ PA8.Mode=I2C
 PA8.Signal=I2C3_SCL
 PA9.Mode=Activate_VBUS
 PA9.Signal=USB_OTG_FS_VBUS
-PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=NAVIGATE_BTN
-PB1.Locked=true
-PB1.Signal=GPIO_Input
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=BATT_LEVEL
+PB0.Signal=ADCx_IN8
 PB10.Mode=Asynchronous
 PB10.Signal=USART3_TX
 PB11.Mode=Asynchronous
@@ -310,7 +311,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_SPI3_Init-SPI3-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_TIM11_Init-TIM11-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,12-MX_USB_HOST_Init-USB_HOST-false-HAL-false,13-MX_TIM10_Init-TIM10-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_SPI3_Init-SPI3-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_TIM11_Init-TIM11-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,12-MX_USB_HOST_Init-USB_HOST-false-HAL-false,13-MX_TIM10_Init-TIM10-false-HAL-true,14-MX_TIM13_Init-TIM13-false-HAL-true,15-MX_TIM9_Init-TIM9-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -343,10 +344,12 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
-SH.ADCx_IN0.0=ADC1_IN0,IN0
-SH.ADCx_IN0.ConfNb=1
 SH.ADCx_IN1.0=ADC3_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
+SH.ADCx_IN8.0=ADC1_IN8,IN8
+SH.ADCx_IN8.ConfNb=1
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
 SH.GPXTI8.0=GPIO_EXTI8
@@ -374,6 +377,10 @@ TIM11.Channel=TIM_CHANNEL_1
 TIM11.IPParameters=Channel,Prescaler,Period
 TIM11.Period=30000-1
 TIM11.Prescaler=36000-1
+TIM13.Channel=TIM_CHANNEL_1
+TIM13.IPParameters=Channel,Prescaler,Period
+TIM13.Period=30000-1
+TIM13.Prescaler=18000-1
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 USART3.BaudRate=115200
@@ -406,6 +413,10 @@ VP_TIM11_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM11_VS_ClockSourceINT.Signal=TIM11_VS_ClockSourceINT
 VP_TIM11_VS_no_output1.Mode=Output Compare1 No Output
 VP_TIM11_VS_no_output1.Signal=TIM11_VS_no_output1
+VP_TIM13_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM13_VS_ClockSourceINT.Signal=TIM13_VS_ClockSourceINT
+VP_TIM13_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM13_VS_no_output1.Signal=TIM13_VS_no_output1
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_USB_HOST_VS_USB_HOST_HID_FS.Mode=HID_FS
