--- a/VISHNE_DEMO/VISHNE_DEMO.ioc
+++ b/VISHNE_DEMO/VISHNE_DEMO.ioc
@@ -114,9 +114,9 @@ Mcu.Pin2=PH0-OSC_IN
 Mcu.Pin20=PD8
 Mcu.Pin21=PD11
 Mcu.Pin22=PD12
-Mcu.Pin23=PC9
-Mcu.Pin24=PA8
-Mcu.Pin25=PA9
+Mcu.Pin23=PD13
+Mcu.Pin24=PC9
+Mcu.Pin25=PA8
 Mcu.Pin26=PA11
 Mcu.Pin27=PA12
 Mcu.Pin28=PC10
@@ -170,6 +170,8 @@ PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=NAVIGATE_BTN
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPXTI0
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=SPEC_VIDEO
 PA1.Signal=ADCx_IN1
 PA11.Mode=Host_Only
 PA11.Signal=USB_OTG_FS_DM
@@ -197,8 +199,6 @@ PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=RTC_SCL
 PA8.Mode=I2C
 PA8.Signal=I2C3_SCL
-PA9.Mode=Activate_VBUS
-PA9.Signal=USB_OTG_FS_VBUS
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=BATT_LEVEL
 PB0.Signal=ADCx_IN8
@@ -246,6 +246,10 @@ PD12.GPIOParameters=GPIO_Label
 PD12.GPIO_Label=BT_INIT
 PD12.Locked=true
 PD12.Signal=GPIO_Output
+PD13.GPIOParameters=GPIO_Label
+PD13.GPIO_Label=EN_5vReg
+PD13.Locked=true
+PD13.Signal=GPIO_Output
 PD2.GPIOParameters=GPIO_Label
 PD2.GPIO_Label=LCD_RST
 PD2.Locked=true
@@ -311,7 +315,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_SPI3_Init-SPI3-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_TIM11_Init-TIM11-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,12-MX_USB_HOST_Init-USB_HOST-false-HAL-false,13-MX_TIM10_Init-TIM10-false-HAL-true,14-MX_TIM13_Init-TIM13-false-HAL-true,15-MX_TIM9_Init-TIM9-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_SPI3_Init-SPI3-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_TIM11_Init-TIM11-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,12-MX_USB_HOST_Init-USB_HOST-false-HAL-false,13-MX_TIM10_Init-TIM10-false-HAL-true,14-MX_TIM13_Init-TIM13-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -328,7 +332,7 @@ RCC.HCLKFreq_Value=168000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=168000000
 RCC.PLLCLKFreq_Value=168000000
@@ -336,6 +340,7 @@ RCC.PLLM=4
 RCC.PLLN=168
 RCC.PLLQ=7
 RCC.PLLQCLKFreq_Value=48000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SYSCLKFreq_VALUE=168000000
